--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@stripe/stripe-react-native": "0.23.3",
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "expo": "~48.0.18",
     "expo-font": "~11.1.1",
     "expo-splash-screen": "^0.18.2",
     "expo-status-bar": "~1.4.4",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.2",
+    "nodemon": "^3.0.2",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
