--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-splash-screen": "^0.18.2",
     "expo-status-bar": "~1.4.4",
     "express": "^4.18.2",
+    "formik": "^2.4.5",
     "mongoose": "^8.0.2",
     "nodemon": "^3.0.2",
     "react": "18.2.0",
@@ -31,7 +32,8 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-snap-carousel": "^4.0.0-beta.6",
-    "react-native-webview": "11.26.0"
+    "react-native-webview": "11.26.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
